# esplib

./: FORMID_DESIGN.md  PLAN_BSA_STRINGS.md  PLAN_ESPLIB_EXTENSION.md  PLAN_FURRIFIER_CONVERSION.md  README.md  pyproject.toml
doc/: api.md  cli.md  esp-format.md
scripts/: build_dialog_patch.py  dump_dialog.py  dump_npc_tints.py  dump_race_tints.py  dump_records.py
src/esplib/: __init__.py  ba2.py  bsa.py  exceptions.py  game_discovery.py  helpers.py  load_order.py  plugin.py  plugin_set.py  record.py  strings.py  utils.py  vmad.py
src/esplib/cli/: main.py
src/esplib/cli/commands/: diff.py  dump.py  info.py  rename_master.py  validate.py
src/esplib/defs/: __init__.py  common.py  context.py  fo4.py  game.py  signatures.py  tes5.py  types.py
tests/: conftest.py  test_access.py  test_ba2.py  test_bsa_sse.py  test_build_dialog_patch.py  test_cli.py  test_cross_plugin.py  test_defs.py  test_defs_fo4.py  test_defs_tes5.py  test_discovery.py  test_dump_dialog.py  test_formid_types.py  test_helpers.py  test_localized_strings.py  test_masters.py  test_phase1_plugin_creation.py  test_phase3_record_creation.py  test_phase4_typed_access_integration.py  test_phase5_cross_plugin.py  test_phase7_cli_gamefiles.py  test_phase_a.py  test_phase_b.py  test_phase_c.py  test_phase_e.py  test_plugin_features.py  test_plugin_ops.py  test_record_creation.py  test_record_defs.py  test_roundtrip.py  test_strings.py  test_vmad.py
tests/manual/: phase_1_manual.py  phase_3_manual.py  phase_4_manual.py  phase_5_manual.py  phase_7_manual.py
